# power-bi-mcp

./: .env.example  LICENSE  README.md  main.py  powerbi_server.py  pyproject.toml
